--- a/docbuild/api/Scrapbook101core.Controllers.CategoryController.yml
+++ b/docbuild/api/Scrapbook101core.Controllers.CategoryController.yml
@@ -19,14 +19,14 @@ items:
     remote:
       path: Scrapbook101core/Controllers/CategoryController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CategoryController
     path: ../Scrapbook101core/Controllers/CategoryController.cs
     startLine: 13
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Controllers
-  summary: "\nIn the Model-View-Controller pattern, the controller processes the input. In this case, it is all the input involving\ncategory operations.\n"
+  summary: "\nIn the Model-View-Controller pattern, the controller processes the input. In this case, it is all the input\ninvolving category operations.\n"
   example: []
   syntax:
     content: 'public class CategoryController : Controller, IActionFilter, IAsyncActionFilter, IFilterMetadata, IDisposable'
@@ -261,7 +261,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/CategoryController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Index
     path: ../Scrapbook101core/Controllers/CategoryController.cs
     startLine: 15
@@ -293,7 +293,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/CategoryController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: GetCategoryFieldsAsync
     path: ../Scrapbook101core/Controllers/CategoryController.cs
     startLine: 21
@@ -347,7 +347,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/CategoryController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: GetString
     path: ../Scrapbook101core/Controllers/CategoryController.cs
     startLine: 47
