--- a/docbuild/api/Scrapbook101core.HelperClasses.yml
+++ b/docbuild/api/Scrapbook101core.HelperClasses.yml
@@ -18,7 +18,7 @@ items:
     remote:
       path: Scrapbook101core/HelperClasses.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: HelperClasses
     path: ../Scrapbook101core/HelperClasses.cs
     startLine: 12
@@ -62,7 +62,7 @@ items:
     remote:
       path: Scrapbook101core/HelperClasses.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: BuildPathList
     path: ../Scrapbook101core/HelperClasses.cs
     startLine: 22
@@ -107,7 +107,7 @@ items:
     remote:
       path: Scrapbook101core/HelperClasses.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: GetGeocode
     path: ../Scrapbook101core/HelperClasses.cs
     startLine: 63
