--- a/docbuild/api/Scrapbook101core.Models.CombinedModel.yml
+++ b/docbuild/api/Scrapbook101core.Models.CombinedModel.yml
@@ -21,7 +21,7 @@ items:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CombinedModel
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 13
@@ -65,7 +65,7 @@ items:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Item
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 15
@@ -100,7 +100,7 @@ items:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CategoryItemsForDisplay
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 17
@@ -135,7 +135,7 @@ items:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CategoryFieldMappingList
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 18
@@ -170,7 +170,7 @@ items:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: LocalUploadFileList
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 19
@@ -205,7 +205,7 @@ items:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: LocalHttpPostedFileList
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 20
