--- a/docbuild/api/Scrapbook101core.Models.FileItem.yml
+++ b/docbuild/api/Scrapbook101core.Models.FileItem.yml
@@ -20,7 +20,7 @@ items:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: FileItem
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 45
@@ -63,7 +63,7 @@ items:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Name
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 47
@@ -98,7 +98,7 @@ items:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Path
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 48
@@ -133,7 +133,7 @@ items:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Role
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 49
@@ -168,7 +168,7 @@ items:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Size
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 50
