--- a/docbuild/api/Scrapbook101core.Scrapbook101Configuration.yml
+++ b/docbuild/api/Scrapbook101core.Scrapbook101Configuration.yml
@@ -31,7 +31,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Scrapbook101Configuration
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 10
@@ -74,7 +74,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Current
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 12
@@ -107,7 +107,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: .ctor
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 14
@@ -137,7 +137,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: AddTestAssets
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 19
@@ -172,7 +172,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: ApplicationName
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 20
@@ -207,7 +207,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: AssetBasePath
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 21
@@ -242,7 +242,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: AuthKey
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 22
@@ -277,7 +277,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: BingMapKey
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 23
@@ -312,7 +312,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CategoryDocumentType
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 24
@@ -347,7 +347,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CollectionId
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 25
@@ -382,7 +382,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: DatabaseId
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 26
@@ -417,7 +417,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Endpoint
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 27
@@ -452,7 +452,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: ItemDocumentType
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 28
@@ -487,7 +487,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: NoAssetImage
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 29
@@ -522,7 +522,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: TestCategories
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 30
@@ -557,7 +557,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: TestItems
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 31
