--- a/docbuild/api/Scrapbook101core.Startup.yml
+++ b/docbuild/api/Scrapbook101core.Startup.yml
@@ -20,7 +20,7 @@ items:
     remote:
       path: Scrapbook101core/Startup.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Startup
     path: ../Scrapbook101core/Startup.cs
     startLine: 18
@@ -63,7 +63,7 @@ items:
     remote:
       path: Scrapbook101core/Startup.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: .ctor
     path: ../Scrapbook101core/Startup.cs
     startLine: 20
@@ -96,7 +96,7 @@ items:
     remote:
       path: Scrapbook101core/Startup.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Configuration
     path: ../Scrapbook101core/Startup.cs
     startLine: 25
@@ -131,7 +131,7 @@ items:
     remote:
       path: Scrapbook101core/Startup.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: ConfigureServices
     path: ../Scrapbook101core/Startup.cs
     startLine: 28
@@ -164,7 +164,7 @@ items:
     remote:
       path: Scrapbook101core/Startup.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Configure
     path: ../Scrapbook101core/Startup.cs
     startLine: 68
