--- a/docbuild/api/Scrapbook101core.Controllers.CategoryController.yml
+++ b/docbuild/api/Scrapbook101core.Controllers.CategoryController.yml
@@ -19,7 +19,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/CategoryController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: CategoryController
     path: ../Scrapbook101core/Controllers/CategoryController.cs
     startLine: 13
@@ -261,7 +261,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/CategoryController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Index
     path: ../Scrapbook101core/Controllers/CategoryController.cs
     startLine: 15
@@ -293,7 +293,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/CategoryController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: GetCategoryFieldsAsync
     path: ../Scrapbook101core/Controllers/CategoryController.cs
     startLine: 21
@@ -347,7 +347,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/CategoryController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: GetString
     path: ../Scrapbook101core/Controllers/CategoryController.cs
     startLine: 47
