--- a/docbuild/api/Scrapbook101core.Models.AssetItem.yml
+++ b/docbuild/api/Scrapbook101core.Models.AssetItem.yml
@@ -22,7 +22,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Item.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: AssetItem
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 150
@@ -67,7 +67,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Item.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Name
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 152
@@ -75,26 +75,12 @@ items:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
   syntax:
-    content: >-
-      [JsonProperty(PropertyName = "name")]
-
-      public string Name { get; set; }
+    content: public string Name { get; set; }
     parameters: []
     return:
       type: System.String
-    content.vb: >-
-      <JsonProperty(PropertyName:="name")>
-
-      Public Property Name As String
+    content.vb: Public Property Name As String
   overload: Scrapbook101core.Models.AssetItem.Name*
-  attributes:
-  - type: Newtonsoft.Json.JsonPropertyAttribute
-    ctor: Newtonsoft.Json.JsonPropertyAttribute.#ctor
-    arguments: []
-    namedArguments:
-    - name: PropertyName
-      type: System.String
-      value: name
   modifiers.csharp:
   - public
   - get
@@ -116,7 +102,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Item.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Size
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 155
@@ -124,26 +110,12 @@ items:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
   syntax:
-    content: >-
-      [JsonProperty(PropertyName = "size")]
-
-      public string Size { get; set; }
+    content: public string Size { get; set; }
     parameters: []
     return:
       type: System.String
-    content.vb: >-
-      <JsonProperty(PropertyName:="size")>
-
-      Public Property Size As String
+    content.vb: Public Property Size As String
   overload: Scrapbook101core.Models.AssetItem.Size*
-  attributes:
-  - type: Newtonsoft.Json.JsonPropertyAttribute
-    ctor: Newtonsoft.Json.JsonPropertyAttribute.#ctor
-    arguments: []
-    namedArguments:
-    - name: PropertyName
-      type: System.String
-      value: size
   modifiers.csharp:
   - public
   - get
@@ -165,7 +137,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Item.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Equals
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 158
@@ -200,7 +172,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Item.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Equals
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 163
@@ -238,7 +210,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Item.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: GetHashCode
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 170
@@ -273,7 +245,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Item.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: CompareTo
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 174
